# assignment-rag

./: .gitignore  pyproject.toml  test_openrouter.py
scripts/: ping_openrouter.py
src/assignment_rag/llm/: openrouter.py
